Fix follow button misalignment

--- a/client/blocks/follow-button/style.scss
+++ b/client/blocks/follow-button/style.scss
@@ -100,8 +100,12 @@ button.follow-button {
 }
 
 .follow-button__label {
-
 	@include breakpoint( "<660px" ) {
 		display: none;
 	}
+}
+
+// Override .button style
+.button.follow-button .gridicon:not(:last-child) {
+	margin-right: 0;
 }
